--- a/smartdns.conf
+++ b/smartdns.conf
@@ -3,24 +3,27 @@ log-level info
 bind [::]:53
 
 #全球DNS
+#全球DNS可指定subnet，可用IP段SG 101.127.0.0/24,HK 210.0.250.30/24,JP 58.138.114.34/24
 server 8.8.8.8
+#server 8.8.8.8 -subnet 101.127.0.0/24
 server 1.1.1.1
-server 1.0.0.1
+#server 1.0.0.1
 server 9.9.9.9
 server 208.67.222.222
 server 4.2.2.1
 
-
 # 亚洲 务必自行检测dns是否在本机是否可用 nslookup www.google.com 8.8.8.8
-
+#大陆
 #server 223.5.5.5
 #server 180.76.76.76
 #server 119.29.29.29
 #server 114.114.114.114
-#server 1.2.4.8
 #server 180.184.1.1
-
-#server 168.95.192.1
+#server 1.2.4.8
+#台湾
+server 168.95.192.1
+#日本
+server-https https://public.dns.iij.jp/dns-query
 
 #IPv6
 #server 2001:4860:4860::8888
