--- a/smartdns.conf
+++ b/smartdns.conf
@@ -21,9 +21,9 @@ server 4.2.2.1
 #server 180.184.1.1
 #server 1.2.4.8
 #台湾
-server 168.95.192.1
+#server 168.95.192.1
 #日本
-server-https https://public.dns.iij.jp/dns-query
+#server-https https://public.dns.iij.jp/dns-query
 
 #IPv6
 #server 2001:4860:4860::8888
