--- a/smartdns.conf
+++ b/smartdns.conf
@@ -1,6 +1,7 @@
 server-name smartdns
 log-level info
-bind [::]:53
+#只监听本地端口，如需要其他服务器请求改为[::]:53
+bind 127.0.0.1:53
 
 #全球DNS
 #全球DNS可指定subnet，可用IP段SG 101.127.0.0/24,HK 210.0.250.30/24,JP 58.138.114.34/24
