--- a/smartdns.conf
+++ b/smartdns.conf
@@ -37,14 +37,14 @@ server 4.2.2.1
 cache-size 32768
 cache-persist yes
 cache-file /etc/smartdns/list.cache
-
+#开启过期缓存，259200 = 3天, 604800 = 7天, 1209600 = 14天 
+serve-expired yes
+serve-expired-ttl 604800
+serve-expired-reply-ttl 3
+#缓存预获取，防止缓存过期,10800 = 3小时, 21600 = 6小时, 43200 = 12小时, 86400 = 1天
 prefetch-domain yes
 serve-expired-prefetch-time 21600
-
-serve-expired yes
-serve-expired-ttl 259200
-serve-expired-reply-ttl 3
-
+#cache定时保存
 cache-checkpoint-time 86400
 
 #完全禁用IPV6解析
@@ -63,4 +63,5 @@ response-mode fastest-ip
 force-qtype-SOA 65
 
 #广告过滤  wget https://anti-ad.net/anti-ad-for-smartdns.conf -O /etc/smartdns/anti-ad-smartdns.conf
+#广告过滤可能会造成某些视频网站无法正常观看（必须要观看广告才能看视频）
 #conf-file /etc/smartdns/anti-ad-smartdns.conf
