--- a/smartdns.conf
+++ b/smartdns.conf
@@ -26,7 +26,7 @@ server 4.2.2.1
 #日本
 #server-https https://public.dns.iij.jp/dns-query
 
-#IPv6
+#IPv6,HK 2403:5000::/32
 #server 2001:4860:4860::8888
 #server 2606:4700:4700::1111
 #server 2620:119:35::35
