--- a/smartdns.conf
+++ b/smartdns.conf
@@ -39,7 +39,7 @@ cache-persist yes
 cache-file /etc/smartdns/list.cache
 #开启过期缓存，259200 = 3天, 604800 = 7天, 1209600 = 14天 
 serve-expired yes
-serve-expired-ttl 604800
+serve-expired-ttl 1209600
 serve-expired-reply-ttl 3
 #缓存预获取，防止缓存过期,10800 = 3小时, 21600 = 6小时, 43200 = 12小时, 86400 = 1天
 prefetch-domain yes
