--- a/smartdns.conf
+++ b/smartdns.conf
@@ -55,9 +55,9 @@ force-AAAA-SOA yes
 #dualstack-ip-selection-threshold 5
 #dualstack-ip-allow-force-AAAA yes
 
-#测速模式
+#测速模式  最快ping响应地址模式	first-ping 最快IP地址模式 fastest-ip  
 speed-check-mode ping,tcp:80,tcp:443
-response-mode fastest-ip
+response-mode first-ping
 
 #iOS系统解析缓慢
 force-qtype-SOA 65
