--- a/smartdns.conf
+++ b/smartdns.conf
@@ -57,6 +57,7 @@ force-AAAA-SOA yes
 
 #测速模式  最快ping响应地址模式	first-ping 最快IP地址模式 fastest-ip  
 speed-check-mode ping,tcp:80,tcp:443
+speed-check-mode tcp:443,tcp:80,tcp:443
 response-mode first-ping
 
 #iOS系统解析缓慢
