--- a/smartdns.conf
+++ b/smartdns.conf
@@ -35,6 +35,7 @@ server 4.2.2.1
 
 #缓存配置
 cache-size 32768
+#持久化到硬盘，如需关闭务必设置为cache-persist no，注释掉默认是根据硬盘空间自动开启
 cache-persist yes
 cache-file /etc/smartdns/list.cache
 #开启过期缓存，259200 = 3天, 604800 = 7天, 1209600 = 14天 
