--- a/smartdns.conf
+++ b/smartdns.conf
@@ -54,6 +54,7 @@ force-AAAA-SOA yes
 #双栈优选
 #dualstack-ip-selection yes
 #dualstack-ip-selection-threshold 5
+#此项为开启双栈优选后，允许仅返回IPv6。如需要流媒体解锁相关，需注意自己的IPv4和IPv6解锁情况
 #dualstack-ip-allow-force-AAAA yes
 
 #测速模式  最快ping响应地址模式	first-ping 最快IP地址模式 fastest-ip  
