--- a/smartdns.conf
+++ b/smartdns.conf
@@ -57,13 +57,13 @@ force-AAAA-SOA yes
 #此项为开启双栈优选后，允许仅返回IPv6。如需要流媒体解锁相关，需注意自己的IPv4和IPv6解锁情况
 #dualstack-ip-allow-force-AAAA yes
 
-#测速模式  最快ping响应地址模式	first-ping 最快IP地址模式 fastest-ip  
+#测速模式  最快ping响应地址模式 first-ping (DNS上游最快查询时延+ping时延最短，查询等待与链接体验最佳，SmartDNS默认)。最快IP地址模式 fastest-ip  (查询到的所有IP地址中ping最短的IP。DNS查询时间最长，IP延迟最短。)
 speed-check-mode ping,tcp:80,tcp:443
 speed-check-mode tcp:443,tcp:80,tcp:443
 response-mode first-ping
 
 #iOS系统解析缓慢
-force-qtype-SOA 65
+#force-qtype-SOA 65
 
 #广告过滤  wget https://anti-ad.net/anti-ad-for-smartdns.conf -O /etc/smartdns/anti-ad-smartdns.conf
 #广告过滤可能会造成某些视频网站无法正常观看（必须要观看广告才能看视频）
