--- a/smartdns.conf
+++ b/smartdns.conf
@@ -68,3 +68,12 @@ response-mode first-ping
 #广告过滤  wget https://anti-ad.net/anti-ad-for-smartdns.conf -O /etc/smartdns/anti-ad-smartdns.conf
 #广告过滤可能会造成某些视频网站无法正常观看（必须要观看广告才能看视频）
 #conf-file /etc/smartdns/anti-ad-smartdns.conf
+
+#TTL 一般情况下无需设置，默认为远程查询结果
+#直接修改为改TTL值
+#rr-ttl
+#修改smartdns缓存的TTL值
+#rr-ttl-min
+#rr-ttl-max
+#修改发送给客户端的TTLS值
+#rr-ttl-reply-max
