--- a/smartdns.conf
+++ b/smartdns.conf
@@ -62,8 +62,8 @@ speed-check-mode ping,tcp:80,tcp:443
 speed-check-mode tcp:443,tcp:80,tcp:443
 response-mode first-ping
 
-#iOS系统解析缓慢
-#force-qtype-SOA 65
+#iOS系统解析缓慢,ECH
+force-qtype-SOA 65
 
 #广告过滤  wget https://anti-ad.net/anti-ad-for-smartdns.conf -O /etc/smartdns/anti-ad-smartdns.conf
 #广告过滤可能会造成某些视频网站无法正常观看（必须要观看广告才能看视频）
