--- a/smartdns.conf
+++ b/smartdns.conf
@@ -69,6 +69,8 @@ force-qtype-SOA 65
 #广告过滤可能会造成某些视频网站无法正常观看（必须要观看广告才能看视频）
 #conf-file /etc/smartdns/anti-ad-smartdns.conf
 
+hosts-file /etc/hosts
+
 #TTL 一般情况下无需设置，默认为远程查询结果
 #直接修改为改TTL值
 #rr-ttl
