Update and rename 归档 to 99-my.conf

--- a/99-my.conf
+++ b/99-my.conf
@@ -1,5 +1,5 @@
 #Debian13 /etc/sysctl.d/99-my.conf
-#wget -O /etc/sysctl.d/99-my.conf "https://github.com/ddd-zero/smartdns_install/raw/refs/heads/main/归档/99-my.conf" && sysctl --system
+#wget -O /etc/sysctl.d/99-my.conf "https://github.com/ddd-zero/smartdns_install/raw/refs/heads/main/99-my.conf" && sysctl --system
 
 
 net.ipv4.tcp_congestion_control = bbr
