--- a/smartdns.conf
+++ b/smartdns.conf
@@ -24,7 +24,7 @@ server 4.2.2.1
 #台湾
 #server 168.95.192.1
 #日本
-#server-https https://public.dns.iij.jp/dns-query
+#server-h3 h3://public.dns.iij.jp/dns-query
 
 #IPv6,HK 2403:5000::/32
 #server 2001:4860:4860::8888
