--- a/smartdns.conf
+++ b/smartdns.conf
@@ -4,7 +4,7 @@ log-level info
 bind 127.0.0.1:53
 
 #全球DNS
-#全球DNS可指定subnet，可用IP段SG 101.127.0.0/24,HK 210.0.250.30/24,JP 58.138.114.34/24
+#全球DNS可指定subnet，可用IP段SG 101.127.0.0/24,HK 210.0.250.30/24,JP 58.138.114.34/24,上海联通 140.207.236.1/24
 server 8.8.8.8
 #server 8.8.8.8 -subnet 210.0.250.30/24
 server 1.1.1.1
